demenchuk/examples/errors/parser/12_bad_multiple_assign.riv
# PARSER ERROR: Неправильное множественное присваивание
# Ожидаемая ошибка: mismatched input at line 4

# Разное количество переменных и значений не проверяется парсером,
# но неправильный синтаксис - да
a, = 1, 2
write(a)
